RESOLVED FIXED49168
[WML] Fix build breaks when WML is enabled
https://bugs.webkit.org/show_bug.cgi?id=49168
Summary [WML] Fix build breaks when WML is enabled
Gyuyoung Kim
Reported 2010-11-08 04:11:35 PST
There are two build breaks when WML is enabled. The backForward() of Page class returns BackForwarddController class type. So, WML classes need to include the BackForwardController.h file. And, select() of RenderTextControl.h was removed. Thus, the select() should be replaced by setSelectionRange(). ================================================================================================================================= /home/gyuyoung/webkit/WebKit-git/WebCore/wml/WMLDocument.cpp: In member function ‘virtual void WebCore::WMLDocument::finishedParsing()’: /home/gyuyoung/webkit/WebKit-git/WebCore/wml/WMLDocument.cpp:71: error: invalid use of incomplete type ‘struct WebCore::BackForwardController’ /home/gyuyoung/webkit/WebKit-git/WebCore/page/Page.h:41: error: forward declaration of ‘struct WebCore::BackForwardController’ /home/gyuyoung/webkit/WebKit-git/WebCore/wml/WMLDoElement.cpp: In member function ‘virtual void WebCore::WMLDoElement::defaultEventHandler(WebCore::Event*)’: /home/gyuyoung/webkit/WebKit-git/WebCore/wml/WMLDoElement.cpp:93: error: invalid use of incomplete type ‘struct WebCore::BackForwardController’ /home/gyuyoung/webkit/WebKit-git/WebCore/page/Page.h:41: error: forward declaration of ‘struct WebCore::BackForwardController’ make[2]: *** [WebCore/CMakeFiles/webcore_efl.dir/wml/WMLDocument.cpp.o] Error 1 make[2]: *** Waiting for unfinished jobs.... make[2]: *** [WebCore/CMakeFiles/webcore_efl.dir/wml/WMLDoElement.cpp.o] Error 1 make[1]: *** [WebCore/CMakeFiles/webcore_efl.dir/all] Error 2 make: *** [all] Error 2 /home/gyuyoung/webkit/WebKit-git/WebCore/wml/WMLInputElement.cpp: In member function ‘virtual void WebCore::WMLInputElement::select()’: /home/gyuyoung/webkit/WebKit-git/WebCore/wml/WMLInputElement.cpp:194: error: ‘class WebCore::RenderTextControl’ has no member named ‘select’ /home/gyuyoung/webkit/WebKit-git/WebCore/wml/WMLInputElement.cpp: In member function ‘void WebCore::WMLInputElement::initialize()’: /home/gyuyoung/webkit/WebKit-git/WebCore/wml/WMLInputElement.cpp:377: warning: comparison between signed and unsigned integer expressions /home/gyuyoung/webkit/WebKit-git/WebCore/wml/WMLInputElement.cpp: In member function ‘WTF::String WebCore::WMLInputElement::validateInputMask(const WTF::String&)’: /home/gyuyoung/webkit/WebKit-git/WebCore/wml/WMLInputElement.cpp:392: warning: comparison between signed and unsigned integer expressions /home/gyuyoung/webkit/WebKit-git/WebCore/wml/WMLInputElement.cpp:396: warning: comparison between signed and unsigned integer expressions =================================================================================================================================
Attachments
Patch (2.84 KB, patch)
2010-11-08 04:18 PST, Gyuyoung Kim
krit: review+
commit-queue: commit-queue-
Patch (2.84 KB, patch)
2010-11-08 20:10 PST, Gyuyoung Kim
commit-queue: commit-queue-
Patch (2.89 KB, patch)
2010-11-09 04:23 PST, Gyuyoung Kim
commit-queue: commit-queue-
Patch (2.89 KB, patch)
2010-11-09 17:05 PST, Gyuyoung Kim
no flags
Gyuyoung Kim
Comment 1 2010-11-08 04:18:27 PST
Dirk Schulze
Comment 2 2010-11-08 07:46:10 PST
Comment on attachment 73232 [details] Patch LGTM. r=me
WebKit Commit Bot
Comment 3 2010-11-08 19:21:59 PST
Comment on attachment 73232 [details] Patch Rejecting patch 73232 from commit-queue. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=abarth-cq-sl', 'land-attachment', '--force-clean', '--ignore-builders', '--non-interactive', '--parent-command=commit-queue', 73232]" exit_code: 1 Last 500 characters of output: s/Scripts/webkitpy/tool/commands/stepsequence.py", line 64, in _run step(tool, options).run(state) File "/Users/abarth/git/webkit-queue/WebKitTools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 66, in run if self._has_valid_reviewer(changelog_entry): File "/Users/abarth/git/webkit-queue/WebKitTools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 48, in _has_valid_reviewer if changelog_entry.reviewer(): AttributeError: 'NoneType' object has no attribute 'reviewer' Full output: http://queues.webkit.org/results/5515043
Gyuyoung Kim
Comment 4 2010-11-08 20:10:36 PST
Created attachment 73339 [details] Patch Krit, I make a patch again. In this time, I'd like to request review again. I just set commit-queue to +.
WebKit Commit Bot
Comment 5 2010-11-09 04:06:20 PST
Comment on attachment 73339 [details] Patch Rejecting patch 73339 from commit-queue. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=abarth-cq-sl', 'land-attachment', '--force-clean', '--ignore-builders', '--non-interactive', '--parent-command=commit-queue', 73339]" exit_code: 1 Last 500 characters of output: s/Scripts/webkitpy/tool/commands/stepsequence.py", line 64, in _run step(tool, options).run(state) File "/Users/abarth/git/webkit-queue/WebKitTools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 66, in run if self._has_valid_reviewer(changelog_entry): File "/Users/abarth/git/webkit-queue/WebKitTools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 48, in _has_valid_reviewer if changelog_entry.reviewer(): AttributeError: 'NoneType' object has no attribute 'reviewer' Full output: http://queues.webkit.org/results/5547041
Gyuyoung Kim
Comment 6 2010-11-09 04:23:52 PST
Created attachment 73355 [details] Patch Hmm, I add "Unreviewed build fix" to reviewer field. However, commit queue checked the reviewer field. If there is still error, I will request review for this patch again. Sorry for my frequent commit.
WebKit Commit Bot
Comment 7 2010-11-09 04:46:53 PST
Comment on attachment 73355 [details] Patch Rejecting patch 73355 from commit-queue. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=abarth-cq-sl', 'land-attachment', '--force-clean', '--ignore-builders', '--non-interactive', '--parent-command=commit-queue', 73355]" exit_code: 1 Last 500 characters of output: s/Scripts/webkitpy/tool/commands/stepsequence.py", line 64, in _run step(tool, options).run(state) File "/Users/abarth/git/webkit-queue/WebKitTools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 66, in run if self._has_valid_reviewer(changelog_entry): File "/Users/abarth/git/webkit-queue/WebKitTools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 48, in _has_valid_reviewer if changelog_entry.reviewer(): AttributeError: 'NoneType' object has no attribute 'reviewer' Full output: http://queues.webkit.org/results/5579016
Gyuyoung Kim
Comment 8 2010-11-09 17:05:53 PST
Created attachment 73439 [details] Patch Krit, Hmm, I don't know why commit-queue rejects this patch. Anyway, I make a patch again. Could you please review again ?
Eric Seidel (no email)
Comment 9 2010-11-09 21:38:42 PST
Comment on attachment 73439 [details] Patch LGTM.
WebKit Commit Bot
Comment 10 2010-11-09 22:00:05 PST
Comment on attachment 73439 [details] Patch Clearing flags on attachment: 73439 Committed r71721: <http://trac.webkit.org/changeset/71721>
WebKit Commit Bot
Comment 11 2010-11-09 22:00:11 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.