2010-11-09  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

Reviewed by Eric Seidel.

        [WML] Fix build breaks when WML is enabled.
        https://bugs.webkit.org/show_bug.cgi?id=49168

        The backForward() of Page class returns BackForwarddController class type.
        So, WML classes need to include the BackForwardController.h file. And, select()
        of RenderTextControl.h was removed. Thus, the select() should be replaced by
        setSelectionRange().

        * wml/WMLDoElement.cpp: Includes BackForwardController.h.
        * wml/WMLDocument.cpp: ditto.
        * wml/WMLInputElement.cpp:
        (WebCore::WMLInputElement::select): Replaced by setSelectionRange().
        * wml/WMLPageState.cpp: Includes BackForwardController.h.
        * wml/WMLPrevElement.cpp: ditto.

Canonical link: https://commits.webkit.org/62201@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71721 268f45cc-cd09-0410-ab3c-d52691b4dbfc